[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,30 @@
 <html>
+  <head>
+        <title>
+            article one ! Mathew thomas
+        </title>
+    </head>
+    <body>
+        <div>
+            <o href="/" >Home</o>
+        </div>
+        <hr/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            Sep 5 2005
+        </div>
+        <div>
+            <p>
+                This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
+            </p>
+             <p>
+                This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
+            </p>
+             <p>
+                This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
+            </p>
+        </div>
+    </body>   
 </html>
