[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -19,14 +19,14 @@
         </div>
         <hr/>
         <h3>
-            Article one
+            Article Two
         </h3>
         <div>
             Sep 5 2005
         </div>
         <div>
             <p>
-                This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
+                This is my content for second article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
             </p>
              <p>
                 This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
