[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -14,6 +14,7 @@
         </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <o href="/" >Home</o>
         </div>
@@ -34,6 +35,7 @@
              <p>
                 This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
             </p>
+        </div>
         </div>
     </body>   
 </html>
