--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -9,7 +9,7 @@
                 max-width:600px;
                 margin:0 auto;
                 color:blue;
-                font-family:sans-serif;
+                font-family:times-newroman;
             }
         </style>
     </head>
