--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -6,10 +6,13 @@
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <style>
             .container{
-                max-width:600px;
-                margin:0 auto;
-                color:blue;
-                font-family:times-newroman;
+                max-width: 600px;
+                margin: 0 auto;
+                color: #3e3c3c;
+                font-family: times-newroman;
+                padding-top: 200px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
         </style>
     </head>
