--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,20 +1,9 @@
-<html>
-    <head>
+<head>
         <title>
             article one ! Mathew thomas
         </title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
-        <style>
-            .container{
-                max-width: 600px;
-                margin: 0 auto;
-                color: #3e3c3c;
-                font-family: times-newroman;
-                padding-top: 200px;
-                padding-left: 20px;
-                padding-right: 20px;
-            }
-        </style>
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
         <div class="container">
@@ -23,14 +12,14 @@
         </div>
         <hr/>
         <h3>
-            Article Two
+            Article One
         </h3>
         <div>
             Sep 5 2005
         </div>
         <div>
             <p>
-                This is my content for second article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
+                This is my content for First article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
             </p>
              <p>
                 This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
@@ -42,3 +31,4 @@
         </div>
     </body>   
 </html>
+
