--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,23 +1,25 @@
-<html>
-    <head>
+<head>
         <title>
             article one ! Mathew thomas
         </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1"/>
+         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div>
             <o href="/" >Home</o>
         </div>
         <hr/>
         <h3>
-            Article one
+            Article One
         </h3>
         <div>
             Sep 5 2005
         </div>
         <div>
             <p>
-                This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
+                This is my content for First article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
             </p>
              <p>
                 This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
@@ -26,5 +28,6 @@
                 This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,This is my content for first article,
             </p>
         </div>
-    </body>
+        </div>
+    </body>   
 </html>
