[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,6 +1,6 @@
 <head>
         <title>
-            article one ! Mathew thomas
+            article Two ! Mathew thomas
         </title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
          <link href="/ui/style.css" rel="stylesheet" />
@@ -12,7 +12,7 @@
         </div>
         <hr/>
         <h3>
-            Article One
+            Article Two
         </h3>
         <div>
             Sep 5 2005
