[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,6 +1,6 @@
 <head>
         <title>
-            article one ! Mathew thomas
+            article Three ! Mathew thomas
         </title>
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
          <link href="/ui/style.css" rel="stylesheet" />
@@ -12,10 +12,10 @@
         </div>
         <hr/>
         <h3>
-            Article One
+            Article Three
         </h3>
         <div>
-            Sep 5 2005
+            Sep 15 2005
         </div>
         <div>
             <p>
