[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h4>Anew Heading</h4>
             I had made some changes
         </div>
+        <script>
+            alert('Hi I am Jawascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
