--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main.txt' class="center text-big bold">
             Hi! I am Mathew and this is my first  webapp.
             <h4>Anew Heading</h4>
             I had made some changes
