--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='/ui/madi.png' src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div id='Newvalue' class="center text-big bold">
