--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='/ui/madi.png' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div id='Newvalue' class="center text-big bold">
@@ -16,7 +16,8 @@
         <script>
             alert('Hi I am Jawascript');
         </script>
-        <script type="text/javascript" src="/ui/main.js">
+        <script 
+        type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
