--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://lh3.googleusercontent.com/-_f1PBe3Ciss/AAAAAAAAAAI/AAAAAAAAAAA/APaXHhSZ9l9OVplDst_qDjXVzPdROB-pDg/mo/photo.jpg?sz=120" class="img-medium"/>
         </div>
         <br>
         <div id='Newvalue' class="center text-big bold">
