[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
             <img id='madi' src="https://lh3.googleusercontent.com/-_f1PBe3Ciss/AAAAAAAAAAI/AAAAAAAAAAA/APaXHhSZ9l9OVplDst_qDjXVzPdROB-pDg/mo/photo.jpg?sz=120" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='Newvalue' class="center text-big bold">
-            Hi! I am Mathew and this is my first  webapp.
-            <h4>Anew Heading</h4>
-            I had made some changes
+        <h3>"Personal"</h3>
+        <div>
+            Hi, My Name is Mathew Thomas
         </div>
-        <script>
-            alert('Hi I am Jawascript');
-        </script>
+        <hr/>
+        <h3>"Professional"</h3>
+        <div>
+            I work at Electronics Regional Test Laboratory
+        </div>
+        <hr/>
+        <div class = "footer">
+        </div>
         <script 
         type="text/javascript" src="/ui/main.js">
         </script>
