[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,10 +20,11 @@
         </div>
         <hr/>
         <div class = "footer">
-            This button<button Id = 'counter'>Click me!</button>has been clicked<span Id = count>0<span> times.
+            This button<button Id = 'counter'>Click me!</button>has been clicked<span Id = count> 0 </span> times.
         </div>
         <script 
         type="text/javascript" src="/ui/main.js">
         </script>
+        </div>
     </body>
 </html>
