[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,8 @@
         <hr/>
         <div class = "footer">
             This button <button Id = 'counter'> Click me! </button> has been clicked <span Id = count> 0 </span>   times.
+            <br/>
+            <input type = 'text' Id = 'name'placeholder = 'name'
         </div>
         <script 
         type="text/javascript" src="/ui/main.js">
