--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,14 @@
         <div class = "footer">
             This button <button Id = 'counter'> Click me! </button> has been clicked <span Id = count> 0 </span>   times.
             <br/>
-            <input type = 'text' Id = 'name'placeholder = 'name'
+            <input type = 'text' Id = 'name' placeholder = 'name'></Input>
+            <input type = 'submit' value = 'submit'></Input>
+            <ul>
+                <li>Name1</li>
+                <li>Name2</li>
+                <li>Name2</li>
+                
+            </ul>
         </div>
         <script 
         type="text/javascript" src="/ui/main.js">
