--- a/ui/index.html
+++ b/ui/index.html
@@ -21,13 +21,11 @@
         <hr/>
         <div class = "footer">
             This button <button Id = 'counter'> Click me! </button> has been clicked <span Id = count> 0 </span>   times.
+            <hr/>
             <br/>
             <input type = 'text' Id = 'name' placeholder = 'name'></Input>
-            <input type = 'submit' value = 'submit'></Input>
-            <ul>
-                <li>Name1</li>
-                <li>Name2</li>
-                <li>Name2</li>
+            <input type = 'submit' value = 'submit' Id = 'submit.btn'></Input>
+            <ul Id ='namelist'>
                 
             </ul>
         </div>
